Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29972

Cannot build Boot2Qt applications with docker toolchain

XMLWordPrintable

    • 2be9a658a (master)

      See the image attached. CMake is not correctly set.

      cmake] The
       build directory 
      "docker://boot2qt-apalis-imx6.6.6.1/Users/qt/RTA/build-quickapp-Boot2Qt_6_6_1_Toradex_Apalis_iMX6-Debug"
       does not exist
      [cmake] Failed to set up CMake file API support. Qt Creator cannot 
      extract project information.
      [cmake] Failed to set up CMake file API support. Qt Creator cannot 
      extract project information.
      [cmake] 
      [cmake] The build directory 
      "docker://boot2qt-apalis-imx6.6.6.1/Users/qt/RTA/build-quickapp-Boot2Qt_6_6_1_Toradex_Apalis_iMX6-Debug"
       does not exist
      [cmake] Failed to set up CMake file API support. Qt Creator cannot 
      extract project information. 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            mipohjan Milla Pohjanheimo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes