src/plugins/projectexplorer/buildpropertiessettings.cpp
@@ -16,7 +16,7 @@ namespace ProjectExplorer {
 
 static QString defaultBuildDirectoryTemplate()
 {
-    return "../%{Asciify:build-%{Project:Name}-%{Kit:FileSystemName}-%{BuildConfig:Name}}";
+    return "./build/%{Asciify:%{Kit:FileSystemName}-%{BuildConfig:Name}}";
 }
 
 BuildPropertiesSettings &buildPropertiesSettings()
